--- a/canvas.css
+++ b/canvas.css
@@ -8,6 +8,7 @@ body {
     /* flex-direction: column; */
     align-items: center;
     gap: 0;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
